<resources>
    <string name="app_name">Inventory App</string>
    <string name="inventory_dashboard">Inventory Dashboard</string>
    <string name="add_data">Add Data</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="request_sms_permission">Request SMS Permission</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="delete">Delete</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="sms_settings">SMS Settings</string>
    <string name="add_item">Add Item</string>
    <string name="sms_settings_app_bar">SMS Settings</string>
    <string name="logout">Logout</string>
    <string name="edit">edit</string>
    <string name="app_logo">App Logo</string>
    <string name="app_title">Gridventory</string>
</resources>